--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -1275,6 +1275,7 @@ en:
     default_avatars: "URLs to avatars that will be used by default for new users until they change them."
     automatically_download_gravatars: "Download Gravatars for users upon account creation or email change."
     digest_topics: "The maximum number of topics to display in the email summary."
+    digest_posts: "The maximum number of popular posts to display in the email summary."
     digest_min_excerpt_length: "Minimum post excerpt in the email summary, in characters."
     delete_digest_email_after_days: "Suppress summary emails for users not seen on the site for more than (n) days."
     digest_suppress_categories: "Suppress these categories from summary emails."
@@ -2436,7 +2437,7 @@ en:
       unsubscribe: "This summary is sent from %{site_link} when we haven't seen you in a while. To unsubscribe %{unsubscribe_link}."
       click_here: "click here"
       from: "%{site_name} summary"
-      why: "A brief summary since your last visit on %{last_seen_at}"
+      preheader: "A brief summary since your last visit on %{last_seen_at}"
       custom:
         html:
           header: ''
